MOW-1594 fix z-index for category popup

--- a/web/src/main/resources/scss/mow-toolbox.scss
+++ b/web/src/main/resources/scss/mow-toolbox.scss
@@ -112,6 +112,7 @@
 		height: 144px;
 		display:inline-flex;
 		padding: 8px;
+		z-index: z-index.$z-dialog-under-keyboard;
 	}
 
 	.gwt-PopupPanel.categoryPopup.penCategory {
